--- a/src/molecules/1_b_LAMMPS_mnr.in
+++ b/src/molecules/1_b_LAMMPS_mnr.in
@@ -1,12 +1,17 @@
 
 
+variable		outputfile_created string '1_a_created.data'
+variable		outputfile_relaxed string '2_relaxed.data'
+variable		outputfile_trajlin string '3_trajlin.data'
+variable		outputfile_assembled string '4_assembled.data'
+
 units           lj
 atom_style      full
 dimension       3
 boundary        p p p
 timestep        0.005
 
-read_data       packed.data
+read_data       ${outputfile_created}
 
 bond_style      fene
 bond_coeff      * 30.0 1.5 1.0 1.0
@@ -39,7 +44,7 @@ unfix           nvtSoft
 unfix           rampSoft
 reset_timestep  0
 
-write_data      relaxed.data
+write_data      ${outputfile_relaxed}
 
 ###########################################################################
 # Full LJ with Coulomb
@@ -53,10 +58,10 @@ write_data      relaxed.data
 # pair_coeff	<type_1>  <type_2>  <eps>  <sigma>  <r_cut_lj>  <r_cut_coul>
 
 # Problem: Onck's model is much more complex, and Marcel has no sigma reported
-# Using sigma=5 randomly (seems to be ~0.5 nm which is kinda what Onck has(?))
+# Using sigma=1 randomly
 
 variable		glob_ljeps equal 1.0
-variable		glob_ljsig equal 1.0
+variable		glob_ljsig 	equal 1.0
 variable		glob_coulcut equal 10.0
 variable		att_ljcut equal 2.50
 variable		rep_ljcut equal 1.12
@@ -74,14 +79,12 @@ pair_coeff		3 4 	${glob_ljeps} 	${glob_ljsig}	${att_ljcut} 	${glob_coulcut}
 pair_coeff		4 4 	${glob_ljeps} 	${glob_ljsig}	${rep_ljcut} 	${glob_coulcut}
 
 
-
-fix             noDrift all momentum 10 linear 1 1 1
-fix             nvt1 all nvt temp ${Temp} ${Temp} 0.5
-dump            1 all custom 1000 self_assemble.lammpstrj id type xu yu zu vx vy vz
-dump		lindump all custom 10000 traj.lin id type xu yu zu vx vy vz
+fix             noDrift 	all momentum 10 linear 1 1 1
+fix             nvt1 		all nvt temp ${Temp} ${Temp} 0.5
+dump            assemble 	all custom 1000 self_assemble.lammpstrj id type xu yu zu vx vy vz
+dump            lindump 	all custom 10000 ${outputfile_trajlin} id type xu yu zu vx vy vz
 
 run             ${runtime}
 
-write_data      assembled.data nofix nocoeff
-
+write_data      ${outputfile_assembled} nofix nocoeff
 
