--- a/src/simulation_prototype/4_LAMMPS_mnr.in
+++ b/src/simulation_prototype/4_LAMMPS_mnr.in
@@ -1,10 +1,7 @@
 
 
-variable		outputfile_created string '1_a_created.data'
-variable		outputfile_relaxed string '2_relaxed.data'
-variable		outputfile_selfasb string '3_a_self_assemble.lammpstrj'
-variable		outputfile_trajlin string '3_b_trajlin.data'
-variable		outputfile_assembled string '4_assembled.data'
+variable		variables_file string '0_sims_vars.data'
+read_data		${variables_file}
 
 units           lj
 atom_style      full
@@ -18,7 +15,6 @@ bond_style      fene
 bond_coeff      * 30.0 1.5 1.0 1.0
 special_bonds   fene
 
-variable        runtime equal 1000000
 variable        Temp equal 1.0
 variable        velSeed equal 926458
 
@@ -83,8 +79,8 @@ pair_coeff		4 4 	${glob_ljeps} 	${glob_ljsig}	${rep_ljcut} 	${glob_coulcut}
 fix             noDrift 	all momentum 10 linear 1 1 1
 fix             nvt1 		all nvt temp ${Temp} ${Temp} 0.5
 
-dump            assemble 	all custom 1000 	${outputfile_selfasb} id type xu yu zu vx vy vz
-dump            lindump 	all custom 10000 	${outputfile_trajlin} id type xu yu zu vx vy vz
+# dump          assemble 	all custom 1000 				${outputfile_selfasb} id type xu yu zu vx vy vz
+dump            lindump 	all custom ${subsample_rate} 	${outputfile_trajlin} id type xu yu zu vx vy vz
 
 run             ${runtime}
 
