--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ nmm-week-6/
 jupyter_tests/
 jupyter/
 brpp_tutorial/
+signac/workspace
+data
 
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,jupyternotebooks
