--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ jupyter_tests/
 jupyter/
 brpp_tutorial/
 signac/workspace
+signac/old_workspaces
 data
 
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,jupyternotebooks
